Menu de master page terminado

--- a/src/main/webapp/views/master-page/messages.properties
+++ b/src/main/webapp/views/master-page/messages.properties
@@ -6,29 +6,36 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-master.page.admin					= Administrator
-master.page.admin.create.contract
-master.page.admin.list.canceled.contracts
-master.page.admin.dashboard
+master.page.admin							= Administrator
+master.page.admin.create.contract			= New Contract
+master.page.admin.list.canceled.contracts	= Cancelled Contracts
+master.page.admin.dashboard					= Dashboard
 
-master.page.auditor					= Auditor
-master.page.auditor.auditedby
-master.page.auditor.toaudit
+master.page.auditor							= Auditor
+master.page.auditor.auditedby				= My Auditions
+master.page.auditor.toaudit					= To Audit
 
-master.page.consumer				= Consumer
-master.page.consumer.requests
-master.page.consumer.contracts
-master.page.consumer.notsigned
-master.page.consumer.invoices
-master.page.consumer.invoicesnotpayed
+master.page.consumer						= Consumer
+master.page.consumer.requests				= Requests
+master.page.consumer.contracts				= Contracts
+master.page.consumer.notsigned				= To Sign
+master.page.consumer.invoices				= Invoices
+master.page.consumer.invoicesnotpayed		= To Pay
 
-master.page.supplier				= Supplier
-master.page.supplier.items
+master.page.supplier						= Supplier
+master.page.supplier.items					= Items
+master.page.supplier.contracts.offered		= Offered
+master.page.supplier.contracts.notsigned	= To Sign
+master.page.supplier.invoices				= Invoices
+
+master.page.profile 						= Profile
+master.page.profile.messages				= Messages
+master.page.profile.search.item.keyword		= Search Items
+master.page.consumer.assessments			= Assessments
+master.page.consumer.curriculum				= Curriculum
+master.page.broadcast.create.broadcast		= Broadcast
 
 
-master.page.profile 				= Profile
-
-
-master.page.list					= List
-master.page.login 					= Login
-master.page.logout 					= Logout
+master.page.list							= List
+master.page.login 							= Login
+master.page.logout 							= Logout
