master page refactor

--- a/src/main/webapp/views/master-page/messages.properties
+++ b/src/main/webapp/views/master-page/messages.properties
@@ -35,7 +35,7 @@ master.page.consumer.assessments			= Assessments
 master.page.consumer.curriculum				= Curriculum
 master.page.broadcast.create.broadcast		= Broadcast
 
-
+master.page.register						= Register
 master.page.list							= List
 master.page.login 							= Login
 master.page.logout 							= Logout
