--- a/src/main/webapp/views/master-page/messages_es.properties
+++ b/src/main/webapp/views/master-page/messages_es.properties
@@ -35,7 +35,7 @@ master.page.consumer.assessments			= Calificaciones
 master.page.consumer.curriculum				= Curriculum
 master.page.broadcast.create.broadcast		= Mensaje Global
 
-
+master.page.register						= Registarse
 master.page.list							= List
 master.page.login 							= Login
 master.page.logout 							= Logout
