listar de customer hecho

--- a/src/main/webapp/views/master-page/messages_es.properties
+++ b/src/main/webapp/views/master-page/messages_es.properties
@@ -23,7 +23,7 @@ master.page.consumer.invoices				= Facturas
 master.page.consumer.invoicesnotpayed		= Por Pagar
 
 master.page.supplier						= Proveedor
-master.page.supplier.items					= Objetos
+master.page.supplier.items					= Artículos
 master.page.supplier.contracts.offered		= Ofertados
 master.page.supplier.contracts.notsigned	= Por Firmar
 master.page.supplier.invoices				= Facturas
