--- a/src/main/webapp/views/customer/messages.properties
+++ b/src/main/webapp/views/customer/messages.properties
@@ -6,5 +6,7 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-customer.action.1	= This is the customer's action 1
-customer.action.2	= This is the customer's action 2
+actor.name		= Name
+actor.surname	= Surname
+curriculum.edit	= Curriculum
+item.list		= Items
