--- a/src/main/webapp/views/master-page/messages_es.properties
+++ b/src/main/webapp/views/master-page/messages_es.properties
@@ -5,6 +5,7 @@
 # The use of this project is hereby constrained to the conditions of the 
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
+master.page.search	=	Buscar Articulos
 
 master.page.admin							= Administrador
 master.page.admin.create.contract			= Nuevo Contrato
